@@ -5,6 +5,7 @@ Version 0.3.5
 -------------
 - Chg: Upgraded jQuery UI to version 1.9.2
 - Bug: Quicksearch doesn't work with entries which have no tags
+- New: Added drag-and-drop feature for sidebar
 
 Version 0.3.4
 -------------
